# chat-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
assets/prompts/: audit-bash.en.md  audit-bash.md  audit-default.en.md  audit-default.md  audit-edit.en.md  audit-edit.md
assets/testdata/: audit-subagent-cases.jsonl  audit-subagent-format.md  audit-subagent-requests.jsonl
docs/: agent-security-audit-study.md  cli-spec.md  next.md  product-plan.md  tool-architecture-study.md
scripts/: build_audit_subagent_requests.py  eval_audit_subagent.py  run_audit_subagent_benchmark.py
src/: app.rs  cli.rs  config.rs  context.rs  error.rs  main.rs  mcp.rs  media.rs  output.rs  provider.rs  render.rs  session.rs  tool.rs
