[package]
name = "chat-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.61"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
ulid = { version = "1.2.1", features = ["serde"] }
