[package]
name = "chat-cli"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.61"
crossterm = "0.29.0"
dirs = "6"
futures-util = "0.3"
os_info = { version = "3.13.0", default-features = false }
regex = "1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
ulid = { version = "1.2.1", features = ["serde"] }
unicode-width = "0.2.0"
walkdir = "2"
